[gd_scene load_steps=20 format=2]

[ext_resource path="res://shaders/HitFlash.tres" type="Shader" id=1]
[ext_resource path="res://scripts/enemies/BottleCapDude.gd" type="Script" id=2]
[ext_resource path="res://assets/Bottle_Cap_Dude.png" type="Texture" id=3]

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 1 )
shader_param/active = false
shader_param/red = 1.0
shader_param/green = 0.412
shader_param/blue = 0.38

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "hit"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=1]
animation = "walk"

[sub_resource type="AnimationNodeOneShot" id=20]

[sub_resource type="AnimationNodeTransition" id=14]
input_count = 2
input_0/name = "alive"
input_0/auto_advance = false
input_1/name = "dead"
input_1/auto_advance = false

[sub_resource type="AnimationNodeOneShot" id=11]

[sub_resource type="AnimationNodeBlendTree" id=2]
graph_offset = Vector2( 244.688, 0 )
nodes/Animation/node = SubResource( 1 )
nodes/Animation/position = Vector2( 400, 140 )
"nodes/Animation 2/node" = SubResource( 9 )
"nodes/Animation 2/position" = Vector2( 870, 243.5 )
"nodes/Animation 3/node" = SubResource( 13 )
"nodes/Animation 3/position" = Vector2( 1200, 340 )
"nodes/Animation 4/node" = SubResource( 16 )
"nodes/Animation 4/position" = Vector2( 400, 280 )
nodes/isAttacking/node = SubResource( 20 )
nodes/isAttacking/position = Vector2( 660, 120 )
nodes/isDead/node = SubResource( 14 )
nodes/isDead/position = Vector2( 1440, 180 )
nodes/isHit/node = SubResource( 11 )
nodes/isHit/position = Vector2( 1060, 100 )
nodes/output/position = Vector2( 1680, 100 )
node_connections = [ "output", 0, "isDead", "isDead", 0, "isHit", "isDead", 1, "Animation 3", "isHit", 0, "isAttacking", "isHit", 1, "Animation 2", "isAttacking", 0, "Animation", "isAttacking", 1, "Animation 4" ]

[sub_resource type="Animation" id=19]
resource_name = "attack"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 5, 6, 7, 8, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:is_attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:can_attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
resource_name = "die"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:dead")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "hit"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, true, true, false, true, false, true, false, true, false, false, true, true, true, false, true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.95 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 8 )

[sub_resource type="RectangleShape2D" id=12]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 29.5, 10 )

[node name="BottleCapDude" type="KinematicBody2D"]
z_index = 2
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 7 )
texture = ExtResource( 3 )
hframes = 11

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 2 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/isAttacking/active = false
parameters/isDead/current = 0
parameters/isHit/active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 19 )
anims/die = SubResource( 15 )
anims/hit = SubResource( 8 )
anims/walk = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1, 0 )
shape = SubResource( 12 )

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -19.5, 0 )
shape = SubResource( 21 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
